--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,19 +8,23 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
 find_package(Qt6 REQUIRED COMPONENTS Core Quick Widgets)
-find_package(Plasma REQUIRED)
+find_package(KF6 REQUIRED COMPONENTS Plasma)
+find_package(Plasma REQUIRED COMPONENTS Framework)
 
 add_library(archbarplugin MODULE
     src/ArchBarContainment.cpp
-    include/ArchBarContainment.h
 )
+
+target_include_directories(archbarplugin PRIVATE include)
 
 target_link_libraries(archbarplugin
     Qt6::Core
     Qt6::Quick
     Qt6::Widgets
-    Plasma::Framework
+    Plasma::Plasma
+    KF6::Plasma
 )
 
-install(TARGETS archbarplugin DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/qt/plugins/plasma/containments)
-install(FILES metadata.json DESTINATION ${CMAKE_INSTALL_PREFIX}/share/kservices5/)
+install(TARGETS archbarplugin DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/qt6/plugins/plasma/containments)
+install(FILES metadata.json DESTINATION ${CMAKE_INSTALL_PREFIX}/share/kservices6/)
+install(DIRECTORY qml/ DESTINATION ${CMAKE_INSTALL_PREFIX}/share/plasma/plasmoids/org.archbar.topbar/contents/ui)
